--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest --config ./jest.config.ts",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "test-cypress": "npx cypress open"
   },
   "dependencies": {
     "@cypress/webpack-preprocessor": "^6.0.0",
